concourse/install/gateway.yml
#@ load("@ytt:data", "data")

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: concourse-gateway
  namespace: concourse
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
        mode: SIMPLE
        credentialName: istio-ingress-wildcard-tls
    hosts:
    - #@ data.values.concourse_hostname
