concourse/install/virtualservice.yml
#@ load("@ytt:data", "data")

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: concourse-virtual-service
  namespace: concourse
spec:
  hosts:
    - #@ "concourse." + data.values.apps_domain
  gateways:
    - app-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: concourse-web
        port:
          number: 8080
